fix: add prevention to horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,8 @@ html {
   font-size: 18px;
   font-family: Raleway, sans-serif;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
-
-body {
-  box-sizing: border-box;
-}
-
 
 /*-------------common------------*/
 ul {
